--- a/code/backend/jarvis/composer.json
+++ b/code/backend/jarvis/composer.json
@@ -9,6 +9,7 @@
         "dcat/laravel-admin": "2.*",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
+        "laravel/horizon": "^5.15",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "nuwave/lighthouse": "^6.6"
