--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,5 @@ $RECYCLE.BIN/
 code/android/EmuAgent/.idea/misc.xml
 code/android/EmuAgent/.idea/deploymentTargetDropDown.xml
 code/android/EmuAgent/app/release/*
+
+node_modules
